(ops,refac) use jdk11 image with jib, reorder and rename some pom properties